// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "repr/src/global_id.proto";
import "repr/src/row.proto";
import "repr/src/proto.proto";
import "expr/src/linear.proto";
import "expr/src/relation.proto";

package mz_dataflow_types.client;

message ProtoPeek {
    mz_repr.global_id.ProtoGlobalId id = 1;
    mz_repr.row.ProtoRow key = 2;
    mz_repr.proto.ProtoU128 uuid = 3;
    uint64 timestamp = 4;
    mz_expr.relation.ProtoRowSetFinishing finishing = 5;
    mz_expr.linear.ProtoSafeMfpPlan map_filter_project = 6;
}
